removed --progress from git checkout, adjusted MVN_OPT - so that it doesn't crash when building due to out-of-memory